Changes for 2.2.5rc1

New features:

Bug fixes:
..F....... [ZBX-8151] fixed XXE vulnerability on XML import using obsolete libxml versions (Andrejs)
..F....... [ZBX-8354] removed period in caption for "Distribution of values for multiple periods" bar report (Andrejs)
.......PS. [ZBX-8092] fixed items being polled at the same time after host becomes enabled (asaveljevs)
.......PS. [ZBX-8324] fixed there being too many expressions in a list in a SQL query (asaveljevs)
...G...... [ZBX-8373] fixed the argument to system.cpu.num[] being ignored on HP-UX (asaveljevs)

--------------------------------------------------------------------------------
Changes for 2.2.4

2.2.4rc4 was released as 2.2.4 without any changes

--------------------------------------------------------------------------------
Changes for 2.2.4rc4

New features:
A.F....... [ZBX-1357] updated Japanese translation; thanks to Zabbix translators (Richlv)

Bug fixes:
...G...... [ZBX-8213] fixed possible crash when processing eventlog on Windows 2000,2003,XP (wiper)

--------------------------------------------------------------------------------
Changes for 2.2.4rc3

Bug fixes:
..F....... [ZBX-8358] fixed overview screen elements being displayed incorrectly after refreshing (Pavels)
A.F....... [ZBX-8334] fixed selecting group prototypes in HostPrototype::get() using Oracle backend (Andrejs)
.......PS. [ZBX-8061] fixed vmware cluster functions returning notsupported despite clusters being discovered normally (wiper)
........S. [ZBX-8348] fixed processing of lld triggers; functions in a trigger expression could be not on the places (Sasha)

--------------------------------------------------------------------------------
Changes for 2.2.4rc2

New features:
A.F....... [ZBX-1357] updated Italian, German and Spanish translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-8095] fixed a bug in item queue that updated item's nextcheck but not its position in the queue (asaveljevs)